customize the ionic blank project and create a skeleton code

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ggt",
+  "name": "GroupTravelTracker",
   "version": "1.1.1",
-  "description": "GGT: An Ionic project",
+  "description": "GroupTravelTracker: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
